Cleanup wayland resources used in kwindowsystem before they're deleted by QPA

Summary:
When the Qt QPA closes it deletes the wl_display
deleting wl_display deletes the wl_registry
when we destroy the kwayland wrapper we double delete
as the windowsystem integration is a singleton we're not deleted till
after qApp.

By manually releasing the wayland parts early we avoid that problem,
whilst still being safe if any app did make a KWindowSystem call during
shutdown.

BUG: 374665

Test Plan:
Locked screen, no longer crashed when typing in password
Opened system settings, created a blurred tooltip then closed. No longer crashed

Making a unit test that runs during qApp shutdown will be incredibly difficult.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D5723